--- a/app/templates/components/video_row.html
+++ b/app/templates/components/video_row.html
@@ -6,6 +6,7 @@
             {{ video.title }}
         </a>
     </td>
+    <td class="text-secondary text-sm">{{ video.date or 'N/A' }}</td>
     <td class="text-secondary text-sm">{{ video.duration or 'N/A' }}</td>
     <td>
         <span class="badge rounded-pill border border-0 
