--- a/app/templates/components/performer_row.html
+++ b/app/templates/components/performer_row.html
@@ -70,7 +70,7 @@
                                     <option value="xhamster" {% if performer.site=='xhamster' %}selected{% endif %}>
                                         xHamster</option>
                                     <option value="x" {% if performer.site=='x' %}selected{% endif %}>
-                                        X (Twitter)</option>
+                                        X</option>
                                 </select>
                             </div>
                             <div class="mb-4 edit-type-container">
