--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -22,7 +22,7 @@
             <option value="">All Sites</option>
             <option value="pornhub">Pornhub</option>
             <option value="xhamster">xHamster</option>
-            <option value="x">X (Twitter)</option>
+            <option value="x">X</option>
         </select>
     </div>
 </div>
@@ -81,7 +81,7 @@
                         <select class="form-select" name="site" id="add-site-select">
                             <option value="pornhub">Pornhub</option>
                             <option value="xhamster">xHamster</option>
-                            <option value="x">X (Twitter)</option>
+                            <option value="x">X</option>
                         </select>
                     </div>
                     <div class="mb-4" id="add-type-container">
