--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -119,7 +119,7 @@
             <a class="navbar-brand" href="/">Siphon</a>
             <div class="d-flex align-items-center gap-3 ms-auto">
                 <ul class="navbar-nav flex-row gap-3">
-                    <li class="nav-item"><a class="nav-link" href="/">Performers</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/performers">Performers</a></li>
                     <li class="nav-item"><a class="nav-link" href="/settings">Settings</a></li>
                 </ul>
             </div>
